--- a/html/Open an account.html
+++ b/html/Open an account.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <  <section class="mainnav">
+      <section class="mainnav">
         <div class="container">
             <div class="logo">
                 <div class="pic">
