hover 產品業重組

--- a/html/intex.html
+++ b/html/intex.html
@@ -181,7 +181,7 @@
                         <div class="pic">
                         <img src="../pic/jinyun-xBuu23uxarU-unsplash.jpg"></div>
                         <h2>臺幣服務</h2>
-                        <p>配合您資金調度，資金靈活運用，多元化加值服務。</p>
+                        <p>配合您資金調度，資金靈活運用，可讓您享有多元化加值服務。</p>
                         <a href="">了解更多</a>   
                     </li>
                     <li>
@@ -381,12 +381,14 @@
                                 <a href="#">木業Line官方帳號</a>
                             </li>
                         </ul>
-                        <div class="pic">
-                            <img src="../pic/bank1.jpg" alt="">
-                        </div>
                     </div>
                  </div>
 
+    </section>
+    <section class="backtotop">
+        <div class="pic">
+            <img src="../pic/top.png" alt="">
+        </div>
     </section>
 
 </body>
