--- a/html/uselogeing.html
+++ b/html/uselogeing.html
@@ -61,9 +61,12 @@
                 <a href="../html/uselogeing.html"><h2>登入網路銀行</h2></a>
             </div>
                 <div class="coutNo">
-                    <input type="new">
-                    <input type="new">
-                    <input type="new">
+                    <form>
+                        <label for="fname">帳號</label>
+                        <input type="text" id="fname" name="fname" value="身分證字號">
+                        <label for="lname">密碼</label>
+                        <input type="text" id="lname" name="lname" value="">
+                      </form>
                 </div>
                 <div class="buttom">
                     <h2>記憶</h2>
