--- a/html/Open an account.html
+++ b/html/Open an account.html
@@ -90,76 +90,81 @@
         </div>
 </section>
 <section class="fotter-1">
-        <div class="container">
-            <div class="item">
-                <h2>聯繫客服與數位服務</h2>
-                <ul class="ecoutmer">
+    <div class="container">
+        <div class="item">
+            <h2>聯繫客服與數位服務</h2>
+            <ul class="ecoutmer">
+                <li>
+                    <a href="#">木業客服</a>
+                </li>
+                <li>
+                    <a href="#">木業數位服務</a>
+                </li>
+                <li> 
+                    <a href="#">行動銀行</a>
+                </li>
+                <li>
+                    <a href="#">木業錢包</a>
+                </li>
+            </ul>
+        </div>
+        <div class="item">
+            <h2>木業服務網</h2>
+            <ul class="ecoutmer-1">
+                <li>
+                    <a href="#">木業金控</a>
+                </li>
+                <li>
+                    <a href="#">木業創投</a>
+                </li>
+                <li> 
+                    <a href="#">木業證券</a>
+                </li>
+                <li>
+                    <a href="#">木業投顧</a>
+                </li>
+                <li>
+                    <a href="#">木業志工</a>
+                </li>
+                <li>
+                    <a href="#">木業文教</a>
+                </li>
+                <li> 
+                    <a href="#">木業人園地</a>
+                </li>
+                <li>
+                    <a href="#">海外服務</a>
+                </li>
+                <li>
+                    <a href="#">菁英招募</a>
+                </li>
+            </ul> 
+        </div>
+        <div class="item">
+                <h2>木業社群</h2>
+            <div class="wrap">
+                <ul class="e-coutmer-2">
                     <li>
-                        <a href="#">木業客服</a>
+                        <a href="#">木業招財</a>
                     </li>
                     <li>
-                        <a href="#">木業數位服務</a>
+                        <a href="#">木業數位生活</a>
                     </li>
                     <li> 
-                        <a href="#">行動銀行</a>
+                        <a href="#">木業Line官方帳號</a>
                     </li>
                     <li>
-                        <a href="#">木業錢包</a>
+                        <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。參考資源:玉山銀行</p>
                     </li>
                 </ul>
             </div>
-            <div class="item">
-                <h2>木業服務網</h2>
-                <ul class="ecoutmer-1">
-                    <li>
-                        <a href="#">木業金控</a>
-                    </li>
-                    <li>
-                        <a href="#">木業創投</a>
-                    </li>
-                    <li> 
-                        <a href="#">木業證券</a>
-                    </li>
-                    <li>
-                        <a href="#">木業投顧</a>
-                    </li>
-                    <li>
-                        <a href="#">木業志工</a>
-                    </li>
-                    <li>
-                        <a href="#">木業文教</a>
-                    </li>
-                    <li> 
-                        <a href="#">木業人園地</a>
-                    </li>
-                    <li>
-                        <a href="#">海外服務</a>
-                    </li>
-                    <li>
-                        <a href="#">菁英招募</a>
-                    </li>
-                </ul> 
-            </div>
-            <div class="item">
-                    <h2>木業社群</h2>
-                <div class="wrap">
-                    <ul class="e-coutmer-2">
-                        <li>
-                            <a href="#">木業招財</a>
-                        </li>
-                        <li>
-                            <a href="#">木業數位生活</a>
-                        </li>
-                        <li> 
-                            <a href="#">木業Line官方帳號</a>
-                        </li>
-                    </ul>
-                    <div class="pic">
-                        <img src="BANJ.jpg" alt="">
-                    </div>
-                </div>
-             </div>
+         </div>
 
+</section>
+<section class="backtotop">
+<div class="pic">
+    <img src="../pic/top.png" alt="">
+</div>
 </section>
 </body>
 </html>
