--- a/html/intex.html
+++ b/html/intex.html
@@ -380,6 +380,9 @@
                             <li> 
                                 <a href="#">木業Line官方帳號</a>
                             </li>
+                            <li>
+                                <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。參考資源:玉山銀行</p>
+                            </li>
                         </ul>
                     </div>
                  </div>
