--- a/html/product description.html
+++ b/html/product description.html
@@ -21,37 +21,39 @@
                 </div>
                 <h1>木業銀行</h1>               
             </a>
-            </div>
-            <ul class="navbar">
-                 <li>
-                     <a href="./aboutus.html">關於我們</a>
-                 </li>
-                 <li>
-                     <a href="./product description.html">產品介紹</a>
-                 </li>
-                 <li>
-                     <a href="#">帳戶升級</a>
-                 </li>
-                 <li>
-                     <a href="#">證明書申請</a>
-                 </li>
-                 <li>
-                     <a href="#">支援服務</a>
-                 </li>
-                 <li>
-                     <a href="#">公告訊息</a>
-                 </li>
-             </ul>
-             <ul class="login">
-                 <li>
-                    <a href="../html/uselogeing.html"><h2>登入網路銀行</h2></a>
-                 </li>
-                 <li>
-                     <a href="#">友善網路銀行</a>
-                 </li>
-             </ul>   
         </div>
-    </section>
+           <ul class="navbar">
+                <li>
+                    <a href="../html/aboutus.html">關於我們</a>
+                </li>
+                <li>
+                    <a href="../html/product description.html">產品介紹</a>
+                </li>
+                <li>
+                    <a href="#">帳戶升級</a>
+                </li>
+                <li>
+                    <a href="#">證明書申請</a>
+                </li>
+                <li>
+                    <a href="../html/vip.html">貴賓服務</a>
+                </li>
+                <li>
+                    <a href="#">公告訊息</a>
+                </li>
+            </ul>
+            <ul class="login">
+                <li>
+                    <a href="../html/uselogeing.html"><h2>登入網路銀行</h2></a>
+                </li>
+                <li>
+                    <a href="#">友善網路銀行</a>
+                </li>
+            </ul>
+                    
+       </div>
+
+   </section>
    
     <section class="sealbanner">
         <div class="container">
