--- a/html/restet.html
+++ b/html/restet.html
@@ -34,7 +34,7 @@
                     <a href="#">證明書申請</a>
                 </li>
                 <li>
-                    <a href="#">支援服務</a>
+                    <a href="../html/vip.html">貴賓服務</a>
                 </li>
                 <li>
                     <a href="#">公告訊息</a>
