--- a/html/Open an account.html
+++ b/html/Open an account.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-      <section class="mainnav">
+    <section class="mainnav">
         <div class="container">
             <div class="logo">
                 <div class="pic">
@@ -36,7 +36,7 @@
                     <a href="#">證明書申請</a>
                 </li>
                 <li>
-                    <a href="#">支援服務</a>
+                    <a href="../html/vip.html">貴賓服務</a>
                 </li>
                 <li>
                     <a href="#">公告訊息</a>
