--- a/html/restet.html
+++ b/html/restet.html
@@ -55,10 +55,10 @@
    
    <section class="mainimg">
        <div class="container">
-        <div class="pic-1">
+        <div class="pic">
             <img src="../pic/retset.jpg.png" alt="#">
         </div>
-        <div class="txt-1">
+        <div class="txt">
                 <h2>了解你,提供隨時便捷服務</h2>
                 <P>完整數位服務，雲端開戶輕鬆享有</P>
                 <a href="../html/newacount.html"><button>我要開戶</button></a>
