--- a/html/vip.html
+++ b/html/vip.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>木業銀行|Taiwan|VIP</title>
-    <link rel="stylesheet" href="../css/logoin-1.css">
+    <link rel="stylesheet" href="../css/vip.css">
     <link rel="stylesheet" href="../css/reset.css">
 </head>
 <body>
@@ -40,7 +40,7 @@
             </ul>
             <ul class="login">
                 <li>
-                    <a href="../html/uselogeing.html"><h2>登入網路銀行</h2></a>
+                    <a href="#"><h2>登入網路銀行</h2></a>
                 </li>
                 <li>
                     <a href="#">友善網路銀行</a>
@@ -54,12 +54,13 @@
     <section class="mainimg">
         <div class="container">
          <div class="pic">
-             <img src="../pic/budding-1.jpg" alt="#">
+             <img src="../pic/climbing.jpg" alt="#">
          </div>
          <div class="txt">
-                 <h2>木業銀行數位銀行</h2>
-                 <P>完整數位服務，雲端開戶輕鬆享有</P>
-                 <a href="../html/newacount.html"><button>我要開戶</button></a>
+                 <h2>木業銀行卓越貴賓</h2>
+                 <h2>溫馨服務|品味生活</h2>
+                 <p>本行財富管理會員最高享3%現金回饋，當期帳單直接折抵。</p>
+                 
              
              </div>
              <ul class="buttons">
@@ -88,7 +89,8 @@
         <div class="item-right">
             <h2>中業極致理財服務,給極致的您</h2><br>
             <h2>在卓越的路上彼此努力</h2><br>
-            <h2>不斷地成為更好的自己</h2>
+            <h3>不斷地成為更好的自己</h3>
+            <h4>專屬於您的24小時</h4>
             </div>
         </div>
     </section>
@@ -100,23 +102,23 @@
             <div class="item">
                 <div class="are">
                 <div class="pic">
-                    <img src="../Icon/Business.gif" alt="">
+                    <img src="../pic/driver.jpg" alt="">
                 </div>
-                <h2>24hr白金秘書</h2>
+                <h2>專屬機場接送</h2>
                 <div class="pic">
-                    <img src="../Icon/Brief.gif" alt="">
+                    <img src="../pic/food.jpg" alt="">
                 </div>
-                <h2>24hr白金秘書</h2>
+                <h2>享樂生活</h2>
             </div>
             <div class="are">
                 <div class="pic">
-                    <img src="../Icon/award.gif" alt="">
+                    <img src="../pic/life.jpg" alt="">
                 </div>
-                <h2>24hr白金秘書</h2>
+                <h2>極致音樂饗宴</h2>
                 <div class="pic">
-                    <img src="../Icon/Brief.gif" alt="">
+                    <img src="../pic/cash.jpg" alt="">
                 </div>
-                <h2>24hr白金秘書</h2>
+                <h2>極速金融</h2>
             </div>
             </div>
         </div>
