剩下最後一頁了

--- a/html/intex.html
+++ b/html/intex.html
@@ -63,7 +63,7 @@
         <div class="txt">
                 <h2>木業銀行數位銀行</h2>
                 <P>完整數位服務，雲端開戶輕鬆享有</P>
-                <a href="../html/newacount.html"><button>我要開戶</button></a>
+                <a href="./Open an account.html"><button>我要開戶</button></a>
             
             </div>
             <ul class="buttons">
