--- a/html/restet.html
+++ b/html/restet.html
@@ -61,7 +61,7 @@
         <div class="txt">
                 <h2>了解你,提供隨時便捷服務</h2>
                 <P>完整數位服務，雲端開戶輕鬆享有</P>
-                <a href="../html/newacount.html"><button>我要開戶</button></a>
+                <a href="./Open an account.html"><button>我要開戶</button></a>
         </div>
     </section>
 
@@ -81,7 +81,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="../Icon/Money.gif" alt="">
+                    <img src="../Icon/Letter.gif" alt="">
                 </div>
                 <h2>我是中業信用卡卡友</h2>
                 <h3>以本行信用卡(卡友)申請/重設</h3><br>
