--- a/html/vip.html
+++ b/html/vip.html
@@ -78,7 +78,7 @@
     </section>
 
     <section class="vip">
-        <div class="container">
+        
         <div class="item-left">
             <h1>中業高端</h1>
             <p>不斷地追求更卓越</p>
@@ -90,9 +90,11 @@
             <h2>中業極致理財服務,給極致的您</h2><br>
             <h2>在卓越的路上彼此努力</h2><br>
             <h3>不斷地成為更好的自己</h3>
-            <h4>專屬於您的24小時</h4>
+            <h4>專屬於您的24小時白金秘書</h4>
+            <h4>成就更美好的未來</h4>
+            <p>中業致力於滿足每一位客戶大大小小的需求</p>
             </div>
-        </div>
+      
     </section>
 
     <section class="little">
