--- a/html/Open an account.html
+++ b/html/Open an account.html
@@ -33,7 +33,7 @@
                     <a href="#">帳戶升級</a>
                 </li>
                 <li>
-                    <a href="#">證明書申請</a>
+                    <a href="../html/loanbanner.html">貸款</a>
                 </li>
                 <li>
                     <a href="../html/vip.html">貴賓服務</a>
@@ -44,16 +44,16 @@
             </ul>
             <ul class="login">
                 <li>
-                    <a href="../html/uselogeing.html"><h2>登入網路銀行</h2></a>
+                    <a href="#"><h2>登入</h2></a>
                 </li>
                 <li>
-                    <a href="#">友善網路銀行</a>
+                    <a href="../html/restet.html">忘記密碼</a>
                 </li>
             </ul>
                     
        </div>
-
-   </section>
+    
+   
  
     </section>
     <section class="mainimg">
