--- a/html/restet.html
+++ b/html/restet.html
@@ -31,7 +31,7 @@
                     <a href="#">帳戶升級</a>
                 </li>
                 <li>
-                    <a href="../html/loanbanner.html">貸款</a>
+                    <a href="../html/loanbanner.html">貸款服務</a>
                 </li>
                 <li>
                     <a href="../html/vip.html">貴賓服務</a>
@@ -173,7 +173,7 @@
                             <a href="#">木業Line官方帳號</a>
                         </li>
                         <li>
-                            <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。參考資源:玉山銀行</p>
+                            <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。參考資源:</p>
                         </li>
                     </ul>
                 </div>
