--- a/html/product description.html
+++ b/html/product description.html
@@ -33,7 +33,7 @@
                     <a href="#">帳戶升級</a>
                 </li>
                 <li>
-                    <a href="../html/loanbanner.html">貸款</a>
+                    <a href="../html/loanbanner.html">貸款服務</a>
                 </li>
                 <li>
                     <a href="../html/vip.html">貴賓服務</a>
