--- a/html/Open an account.html
+++ b/html/Open an account.html
@@ -27,13 +27,13 @@
                     <a href="../html/aboutus.html">關於我們</a>
                 </li>
                 <li>
-                    <a href="../html/product description.html">產品介紹</a>
+                    <a href="../html/product description.html">信用卡服務</a>
                 </li>
                 <li>
                     <a href="#">帳戶升級</a>
                 </li>
                 <li>
-                    <a href="../html/loanbanner.html">貸款服務</a>
+                    <a href="./loanbanner.html">貸款申請</a>
                 </li>
                 <li>
                     <a href="../html/vip.html">貴賓服務</a>
@@ -44,18 +44,16 @@
             </ul>
             <ul class="login">
                 <li>
-                    <a href="#"><h2>登入</h2></a>
+                    <a href="a"><h2>登入</h2></a>
                 </li>
                 <li>
-                    <a href="../html/restet.html">忘記密碼</a>
+                    <a href="./restet.html">忘記密碼</a>
                 </li>
             </ul>
                     
        </div>
-    
-   
- 
-    </section>
+
+   </section>
     <section class="mainimg">
         <div class="container">
          <div class="pic">
